# Web_hw_12

./: README.md  main.py  pyproject.toml
src/config/: conf.py
src/database/: db.py
src/entity/: models.py
src/repository/: consumers.py  users.py
src/routes/: auth.py  users.py
src/schemas/: consumer.py
src/services/: auth.py  roles.py
